<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NRCS Soil Health</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="LaunchpadSection">Quiz</string>
    <string name="soilquestion">Is your soil healthy?</string>
    <string name="fewquestions">Answer a few questions and find out…</string>
    <string name="startpic">Clipboard and Soil Sampler laying on top of a soil surface with deep cracks</string>
    <string name="dummy_section_text">Question</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="load_quiz">Load Quiz</string>
    <string name="video_text">This section is for videos</string>
    <string name="document_text">This section is for documents</string>
    <string name="question_text1">Earthworms</string>
    <string name="question_text2">Compaction</string>
    <string name="question_text3">Crop Vigor / Appearance</string>
    <string name="question_text4">Crusting</string>
    <string name="question_text5">Drainage</string>
    <string name="question_text6">Plant Roots</string>
    <string name="question_text7">Porosity</string>
    <string name="question_text8">Residue Decomposition</string>
    <string name="question_text9">Root Mass</string>
    <string name="question_text10">Salts</string>
    <string name="question_text11">Smell</string>
    <string name="question_text12">Sodium</string>
    <string name="question_text13">Soil Aggregates</string>
    <string name="question_text14">Soil Organisms</string>
    <string name="question_text15">Soil Tilth / Structure</string>
    <string name="question_text16">Surface Organic Material</string>
    <string name="question_text17">Water Holding Capacity</string>
    <string name="question_text18">Water Infiltration</string>
    <string name="question_text19">Wind or Water Erosion</string>
    <string name="question_text20">Workability</string>
    <string name="review_answers">Review Answers</string>
    <string name="results">Results</string>
    <string name="information">Information</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="location">Location / Field</string>
    <string name="earthworm_l">Few worms per shovel, no casts or holes</string>
    <string name="earthworm_m">More worms per shovel, some casts or holes</string>
    <string name="earthworm_h">Many worms per shovel, many casts or holes</string>
    <string name="compaction_l">Hard layers, tight soil, restricted root penetration, obvious hardpan, roots turned awkwardly</string>
    <string name="compaction_m">Firm soil, slightly restricted root penetration, moderate shovel resistance and penetration of wire flag beyond tillage layer</string>
    <string name="compaction_h">Loose soil, unrestricted root penetration, no hardpan, mostly vertical root plant growth</string>
    <string name="Internet">Internet</string>
</resources>
