<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="25.0sp" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/question_text1" />
        <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/earthworm" android:scaleType="center" android:adjustViewBounds="true" android:maxHeight="200.0dip" android:contentDescription="@string/document_text" />
        <RadioGroup android:id="@id/radioGroup1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioButton android:id="@id/radio0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/earthworm_l" />
            <RadioButton android:id="@id/radio1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/earthworm_m" />
            <RadioButton android:id="@id/radio2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/earthworm_h" />
        </RadioGroup>
    </TableLayout>
</ScrollView>