<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="25.0sp" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/information" />
        <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" />
        <EditText android:id="@id/editText1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="textPersonName" />
        <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date" />
        <EditText android:id="@id/editText2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="date" />
        <TextView android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/location" />
        <EditText android:id="@id/editText3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="textNoSuggestions" />
    </TableLayout>
</ScrollView>